TP-3299: reverse logic to display Tumblr by default. Hide whatsapp to prevent horizontal scroll

--- a/drupal/sites/all/themes/base/sass/base/icons/_social-menu.scss
+++ b/drupal/sites/all/themes/base/sass/base/icons/_social-menu.scss
@@ -472,6 +472,9 @@ body.node-type-openpublish-photo-gallery {
     text-indent: 0;
     display: block;
   }
+  &.tp-social-whatsapp {
+    display: none;
+  }
 }
 .social-wrapper.mobile.sharing li.takeaction{
   margin-left: -25%;
